@startuml
skinparam classAttributeIconSize 0
hide circle

class Runnable <<interface>> {
  +{abstract} run()
}

package menu {
class MenuItem {
  - menuText : Object
  - menuResponse : Runnable
  + MenuItem(menuText : Object, menuResponse : Runnable)
  + toString() : String <<override>>
  + run() <<override>>
}
class Menu {
  # pre : Object
  - items : MenuItem[] <<ArrayList>>
  + result : StringBuilder
  # post : Object
--
  + Menu(pre : Object, post : Object, items : MenuItem...)
  + addMenuItem(item : MenuItem)
  + run(itemNumber : int)
  + runOnce()
  + run()
  + toString() : String <<override>>
..
  + {static} getString(prompt : String) : String
  + {static} getInt(prompt : String) : Integer
  + {static} getDouble(prompt : String) : Double
  + {static} getChar(prompt : String) : Character
  + {static} getBoolean(prompt : String) : Boolean
  + {static} arrayToString(title : String, array : Object[]) : String
  + {static} listToString(title : String, list : List) : String
  + {static} selectItemFromArray(prompt : String, array : Object[]) : Integer
  + {static} selectItemFromList(prompt : String, list : List) : Integer
  + {static} selectFile(prompt : String, starting : File, filter : FilenameFilter)
..
  - recursiveAppend(sb : StringBuilder, addendum : Object)
}
}

Runnable <|.. MenuItem
Runnable <|.. Menu
Menu o- MenuItem
@enduml

